--- a/experiment 1/experiment_1.ipynb
+++ b/experiment 1/experiment_1.ipynb
@@ -6,13 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import transformers\n",
     "import torch\n",
     "import datasets\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from tqdm import tqdm"
+    "from experiment_1 import run_experiment_1, run_experiment_1_b, run_experiment_1_c"
    ]
   },
   {
@@ -31,7 +27,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "840a44c1a0c64f5b939152e9ae690b0c",
+       "model_id": "4197ff02ffa84286b2dbac7eef879906",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,13 +60,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Load CLIP"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -97,23 +86,128 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from experiment_1 import run_experiment_1"
+    "## Experiment 1.a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading cached processed dataset at C:\\Users\\chris\\.cache\\huggingface\\datasets\\cringgaard___parquet\\cringgaard--boatsV2-2a63089b8a44e701\\0.0.0\\2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec\\cache-94e3437cfde98744.arrow\n",
+      "Loading cached processed dataset at C:\\Users\\chris\\.cache\\huggingface\\datasets\\cringgaard___parquet\\cringgaard--boatsV2-2a63089b8a44e701\\0.0.0\\2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec\\cache-67819a3e9bdd2ee1.arrow\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running experiment 1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6330/6330 [05:35<00:00, 18.85it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.033491311216429696\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy_1 = run_experiment_1(dataset=dataset, model=CLIP_not_FT, processor=processor, device=device)\n",
+    "print(accuracy_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experiment 1.b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2203b6d5f44847818579fd6d0cdb9fe7",
+       "model_id": "8b0dc254e16b4bae99cd409cec917841",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/13 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6330/6330 [05:46<00:00, 18.27it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1344391785150079\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy_1b = run_experiment_1_b(dataset=dataset, model=CLIP_not_FT, processor=processor, device=device)\n",
+    "print(accuracy_1b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experiment 1.c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d72a85c0834d43709f6facfd62a5116c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +221,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "189bf463f8b246058376b675403dbd8b",
+       "model_id": "6bc76989f9ea4a24bd1515d5f5bc0f94",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,14 +236,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12835/12835 [13:08<00:00, 16.28it/s]"
+      "100%|██████████| 6330/6330 [05:49<00:00, 18.10it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.09902610050642774\n"
+      "0.008214849921011059\n"
      ]
     },
     {
@@ -161,8 +255,8 @@
     }
    ],
    "source": [
-    "accuracy = run_experiment_1(dataset=dataset, model=CLIP_not_FT, processor=processor, device=device)\n",
-    "print(accuracy)"
+    "accuracy_1c = run_experiment_1_c(dataset=dataset, model=CLIP_not_FT, processor=processor, device=device)\n",
+    "print(accuracy_1c)"
    ]
   }
  ],
